[package]
name = "egg-tutorial-pldi-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egg = "0.8"
# egg = { path = "../egg" }
egg = { git = "https://github.com/egraphs-good/egg", branch = "tutorial-changes" }

# for the interval library
num = "0.4"
auto_ops = "0.3"